--- a/Harvey_Norman.html
+++ b/Harvey_Norman.html
@@ -15,10 +15,10 @@
     <!--The Header-->
     <div class="header-container col-xs-10 col-md-9 col-lg-9">
         <div class="col-xs-12 col-md-4 col-lg-3">
-            <img src="images/SP-logo.png" alt="Singapore Poly Logo">
+            <img src="images/Stevenanalysislogo.jpg" alt="Simple Logo">
         </div>
         <div class="col-xs-12 col-md-8 col-lg-9">
-            <h1>My Assignment 1:  Comparison of electronic websites</h1>
+            <h1>Discussion Topic:  Comparison of electronic websites</h1>
         </div>
     </div>
 
@@ -48,8 +48,8 @@
                     <h2 class="modal-title">My Profile</h2>
                 </div>
                 <div class="modal-body">
-                    <p>Student Name: Steven Chan HuiZheng</p>
-                    <p>Student Number: 7251991</p>
+                    <p>Name: Steven Chan HuiZheng</p>
+                    <p>Number: 7251991</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -165,7 +165,7 @@
     <div class="subtitle col-xs-12">
         <br>
         <h2 class="spcolor">Other Write Ups</h2>
-        <h3>(Please click the links below to access the respective short write up)</h3>
+        <h3>(Please click the company's logo below to access the respective short write up)</h3>
     </div>
 
     <div class="layout textalign col-xs-12">
