--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <!--The Header-->
     <div class="header-container col-xs-10 col-md-9 col-lg-9">
         <div class="col-xs-12 col-md-4 col-lg-3">
-            <img src="images/SP-logo.png" alt="Singapore Poly Logo">
+            <img src="images/Stevenanalysislogo.jpg" alt="Simple Logo">
         </div>
         <div class="col-xs-12 col-md-8 col-lg-9">
-            <h1>My Assignment 1:  Comparison of electronic websites</h1>
+            <h1>Discussion Topic: Comparison of electronic websites</h1>
         </div>
     </div>
 
@@ -49,8 +49,8 @@
                     <h2 class="modal-title">My Profile</h2>
                 </div>
                 <div class="modal-body">
-                    <p>Student Name: Steven Chan HuiZheng</p>
-                    <p>Student Number: 7251991</p>
+                    <p>Name: Steven Chan HuiZheng</p>
+                    <p>Number: 7251991</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
