--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--The Header-->
     <div class="header-container col-xs-10 col-md-9 col-lg-9">
         <div class="col-xs-12 col-md-4 col-lg-3">
-            <img src="images/Stevenanalysislogo.jpg" alt="Simple Logo">
+            <img src="images/Stevenanalysislogo.JPG" alt="Simple Logo">
         </div>
         <div class="col-xs-12 col-md-8 col-lg-9">
             <h1>Discussion Topic: Comparison of electronic websites</h1>
