--- a/BD.html
+++ b/BD.html
@@ -15,7 +15,7 @@
     <!--The Header-->
     <div class="header-container col-xs-10 col-md-9 col-lg-9">
         <div class="col-xs-12 col-md-4 col-lg-3">
-            <img src="images/Stevenanalysislogo.jpg" alt="Simple Logo">
+            <img src="images/Stevenanalysislogo.JPG" alt="Simple Logo">
         </div>
         <div class="col-xs-12 col-md-8 col-lg-9">
             <h1>Discussion Topic:  Comparison of electronic websites</h1>
@@ -27,7 +27,7 @@
         <div class="nav-align col-lg-7 col-md-6 col-sm-2 col-xs-1"></div>
         <div class="nav-align col-lg-5 col-md-6 col-sm-10 col-xs-11">
             <a href=index.html>Home</a>
-            <a href="discussion.html">Discussion</a>
+            <a href="Discussion.html">Discussion</a>
             <a href="Comparison.html">Comparison</a>
         </div>
     </div>
