--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="nav-align col-lg-7 col-md-6 col-sm-2 col-xs-1"></div>
         <div class="nav-align col-lg-5 col-md-6 col-sm-10 col-xs-11">
             <a href=index.html>Home</a>
-            <a href="discussion.html">Discussion</a>
+            <a href="Discussion.html">Discussion</a>
             <a href="Comparison.html">Comparison</a>
         </div>
     </div>
