--- a/Comparison.html
+++ b/Comparison.html
@@ -72,7 +72,7 @@
      <div class="container big-container col-xs-12">
          <div class="row">
              <div class="side-content col-xs-12 col-md-3">
-                 <div class="fix panel panel-danger">
+                 <div class="fix panel panel-danger smallhide">
                      <div class="panel-heading">
                          <h3 class="panel-title">Contents</h3>
                      </div>
