--- a/Comparison.html
+++ b/Comparison.html
@@ -64,12 +64,12 @@
      </div>
 
      <div id="1" class="subtitle col-xs-12 col-md-12">
-         <h2 class="textalign shift-spacing">Comparison Overview</h2>
+         <h2 class="textalign">Comparison Overview</h2>
          <br>
      </div>
 
 
-     <div class="container big-container col-xs-12">
+     <div class="big-container col-xs-12"> <!--take out class container -->
          <div class="row">
              <div class="side-content col-xs-12 col-md-3">
                  <div class="fix panel panel-danger smallhide">
@@ -100,7 +100,7 @@
              </div>
              <div class="comparison-container col-xs-12 col-md-9">
                  <div class="table-container col-xs-12">
-                     <table>
+                     <table class="tablecomparewidth">
                          <tr>
                              <th class="table-spacing"></th>
                              <th class="table-spacing textalign">Challenger</th>
@@ -154,6 +154,8 @@
                      </table>
                  </div>
                  <!--First Comparison Graph-->
+
+
                  <div id="2" class="subtitle chartspacing margin-top col-xs-12">
                      <h2>Navigation Comparison</h2>
                  </div>
