--- a/Comparison.html
+++ b/Comparison.html
@@ -270,7 +270,7 @@
                  <div id="8" class="subtitle chartspacing margin-top col-xs-12">
                      <h2>Summary</h2>
                      <br>
-                     <h4>In terms of overview, the Best Denki and Harvey Norman websites are the two better ones. While it is never easy to achieve a perfectly flawless website,
+                     <h4 class="summarytext">In terms of overview, the Best Denki and Harvey Norman websites are the two better ones. While it is never easy to achieve a perfectly flawless website,
                     these websites demostrated a considerably good web design based on the factors reviewed. Based on the factors reviewed, these two websites have most of its ratings
                     better than the other two websites. As web design does not depends on only one criteria, these factors will definitely compliment a good web design and there are actually
                     more factors to be analyzed, however, on this discussion, these six core factors are good enough to evaluate a website.</h4>
