--- a/Courts.html
+++ b/Courts.html
@@ -61,7 +61,7 @@
 
      <div class="subtitle col-xs-12">
          <a href="http://www.courts.com.sg/">
-             <img src="images/Courts_logo.jpg">
+             <img src="images/courts_logo.jpg">
          </a>
      </div>
 
